# ServiceSystem

./: CMakeLists.txt  main.cpp
Document/: idea.md
IPC/: CMakeLists.txt
IPC/lib/: ipc.h
IPC/src/: ipc.cpp
Service/: CMakeLists.txt
Service/lib/: service.h
Service/src/: service.cpp
Test/: CMakeLists.txt
Test/InterProcessCommunication/: CMakeLists.txt  main.cpp
